# internal/api/handler/auth/handler.go
@@ -20,7 +20,7 @@ type AuthHandler struct {
 // @Produce json
 // @Param username formData string true "Имя пользователя" example("admin")
 // @Param password formData string true "Пароль" example("1234")
-// @Success 200 {object} dto.AccessToken
+// @Success 200 {object} dto.TokenResponse
 // @Failure 401 {object} dto.ErrorResponse
 // @Failure 500 {object} dto.ErrorResponse
 // @Router /login [post]
@@ -36,6 +36,31 @@ func (h *AuthHandler) Login(c echo.Context) error {
 	}
 	result := dto.TokenResponse{AccessToken: token}
 	return c.JSON(http.StatusOK, result)
+}
+
+// Register godoc
+// @Summary Регистрация пользователя
+// @Description Выполняет регистрацию пользователя и возвращает JWT токен
+// @Tags auth
+// @Accept x-www-form-urlencoded
+// @Produce json
+// @Param username formData string true "Имя пользователя" example("admin")
+// @Param password formData string true "Пароль" example("1234")
+// @Success 200 {object} dto.TokenResponse
+// @Failure 401 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /register [post]
+func (h *AuthHandler) Register(c echo.Context) error {
+	var req dto.AuthLogin
+	if err := c.Bind(&req); err != nil {
+		return ApiError.NewAPIError(http.StatusBadRequest, "invalid data")
+	}
+	token, err := h.service.Register(req.Username, req.Password)
+	if err != nil {
+		return err
+	}
+	result := dto.TokenResponse{AccessToken: token}
+	return c.JSON(http.StatusCreated, result)
 }
 
 func NewAuthHandler(service auth.AuthService) *AuthHandler {
